Fixes #8443.  Changed overflow:auto to overflow-y:auto.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@16409 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1528,7 +1528,7 @@ img.dijitColorPaletteUnder {
 
 .dijitTextArea {
 	width:100%;
-	overflow: auto;	/* w/out this IE's SimpleTextArea goes to overflow: scroll */
+	overflow-y: auto;	/* w/out this IE's SimpleTextArea goes to overflow: scroll */
 }
 .dijitTextArea[cols] {
 	width:auto; /* SimpleTextArea cols */
